opam-version: "2.0"
name: "satysfi-xpath-doc"
version: "0.2.0"
synopsis: "Docs of advanced path algorithms in SATySFi"
description: """Docs of advanced path algorithms in SATySFi"""

maintainer: "Yasuo Ozu <yasuo@ozu.email>"
authors: "Yasuo Ozu <yasuo@ozu.email>"
license: "LGPL-3.0-or-later"
homepage: "https://github.com/yasuo-ozu/satysfi-xpath"
bug-reports: "https://github.com/yasuo-ozu/satysfi-xpath/issues"
dev-repo: "git+https://github.com/yasuo-ozu/satysfi-xpath.git"

depends: [
  "satysfi" {>= "0.0.5" & < "0.1.0"}
  "satysfi-dist"
  "satysfi-xpath" {= "%{version}%"}
  "satyrographos" {>= "0.0.2.6" & < "0.0.3"}
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "xpath-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "xpath-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]

