opam-version: "2.0"
name: "satysfi-xpath"
version: "0.3.0"
synopsis: "Advanced path algorithms in SATySFi"
description: """Advanced path algorithms in SATySFi"""

maintainer: "Yasuo Ozu <yasuo@ozu.email>"
authors: "Yasuo Ozu <yasuo@ozu.email>"
license: "LGPL-3.0-or-later"
homepage: "https://github.com/yasuo-ozu/satysfi-xpath"
bug-reports: "https://github.com/yasuo-ozu/satysfi-xpath/issues"
dev-repo: "git+https://github.com/yasuo-ozu/satysfi-xpath.git"

depends: [
  "satysfi" {>= "0.0.5" & < "0.1.0"}
  "satysfi-dist"
  "satyrographos" {>= "0.0.2.6" & < "0.0.3"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "--name" "xpath"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
